SAK-48893 Fixing Site Info UI to Align with 22.x design standards (B-5) (#11560)
(cherry picked from commit 592f88d819a54b706cdfa131d31061f875746ed2)

--- a/site-manage/pageorder/tool/src/webapp/content/css/PageList.css
+++ b/site-manage/pageorder/tool/src/webapp/content/css/PageList.css
@@ -84,8 +84,7 @@ li.sortable_hover
 }
 .item_control.del-link
 {
-	color: var(--errorBanner-color);
-	background: var(--errorBanner-bgcolor);
+	color: var(--errorBanner-color) !important;
 }
 .item_control_box .dropdown-menu>li>a
 {
